--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.8",
     "concurrently": "^9.1.0",
+    "date-fns": "^4.1.0",
     "node-cron": "^3.0.3",
     "pdfkit": "^0.15.1",
     "pitlaharshavardhan": "file:",
