--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mysql2": "^3.11.5",
+    "pdfkit": "^0.16.0",
     "server": "file:"
   }
 }
