--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-cron": "^3.0.3",
     "pdfkit": "^0.15.1",
     "pitlaharshavardhan": "file:",
+    "qr-scanner": "^1.4.2",
     "react-scripts": "^5.0.1"
   }
 }
