--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "qr-scanner": "^1.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
