--- a/package.json
+++ b/package.json
@@ -16,15 +16,22 @@
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
+    "node-cron": "^3.0.3",
+    "pdfkit": "^0.16.0",
     "pitlaharshavardhan": "file:",
     "qr-scanner": "^1.4.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "uuid": "^11.1.0",
     "web-vitals": "^4.2.4"
   },
   "browserslist": {
